--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,16 +1,33 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
+
+.container{
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
 
 img {
   width: 100px;
-  height: 100px;
+  height: 100px; 
+  
 }
+
+.veggies{
+ max-width: 200px; 
+}
+
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
+
 
 /* do not edit this footer */
 .footer {
