Add the fifth solution of flex

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -15,11 +15,27 @@ body {
   justify-content: center;
 }
 
+.header{
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+  margin-bottom: 12px;
+  align-items: center;
+  padding: 8px;
+}
+.text{
+  margin-bottom: 12px;
+}
+
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+
+  padding: 10px;
+
 }
 
 .icon {
@@ -28,6 +44,7 @@ body {
   font-weight: 700;
   background: lavender;
   width: 42px;
+  flex-shrink: 0;
   height: 42px;
   border-radius: 50%;
   display: flex;
