--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -2,20 +2,51 @@
 
 body {
   height: 100vh;
-  margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  margin: 0;  
+  display: flex;
+  flex-direction: column;
 }
 
 img {
   width: 600px;
 }
 
+ul{
+  list-style-type: none;
+  margin: 0%;
+  padding: 8px;
+  display: flex;
+  
+}
+ul a{
+  color: black;
+  text-decoration: none;
+}
+.header,.footer{
+  display: flex;
+  padding: 8px;
+  justify-content: space-between;
+}
+.right-links, .left-links{
+  display: flex;
+  gap: 18px;
+}
+.content{
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 16px;
+}
 button {
   font-family: Roboto, sans-serif;
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -23,4 +54,12 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+  margin-bottom: 16px;
 }
+.footer{
+  background-color: #eee;
+  bottom: 0;
+  
+  
+}
+
